--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -1,6 +1,7 @@
 \documentclass{resume}
 
 \usepackage[left=0.75in,top=0.6in,right=0.75in,bottom=0.6in]{geometry}
+\usepackage{url}
 
 %---------------------------------------------------------------------
 %	Name and Address Section
@@ -10,7 +11,8 @@
 \address{250 East 6th Street, Apt 0402 \\
          Saint Paul, MN 55101}
 \address{(832)~$\cdot$~720~$\cdot$~2393 \\
-         nravi.research@gmail.com, rn.naveen1@gmail.com}
+         \url{http://www.naveenravichandrasekaran.com/} \\
+         nravi.research@gmail.com}
 
 \begin{document}
 
