--- a/cv/technical.tex
+++ b/cv/technical.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Computer Languages          & C/C++, Fortran, Java, Python, Ruby, Scala \\
 Parallel Programming Models & OpenSHMEM, OpenMP, MPI, Coarray Fortran \\
-Network Libraries           & DMAPP \\
+Network Libraries           & DMAPP, Verbs, Libfabrics \\
 Architectures               & Cray Supercomputers, \& Clusters, Intel MIC \\
 \end{tabular}
