--- a/cv/activities.tex
+++ b/cv/activities.tex
@@ -1,5 +1,5 @@
 \begin{enumerate}
 \setcounter{enumi}{0}
 \item \textit{OpenSHMEM standardization Effort}, Participate and represent Cray Inc. in
-OpenSHMEM standards committee.
+OpenSHMEM standards committee. \url{http://openshmem.org/}
 \end{enumerate}
