--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -1,9 +1,21 @@
 \textbf{Current Projects}
 \begin{enumerate}
 \setcounter{enumi}{0}
+\item \textbf{Cray OpenSHMEMX}
+    \begin{itemize}
+        \item Cray OpenSHMEMX is a new SHMEM library implementation developed to
+        supersede the existing production ready Cray SHMEM library on future
+        exascale Cray architectures
+        \item Design and develop Cray OpenSHMEMX from scratch with support for
+        different transport layers including DMAPP, XPMEM, and Libfabrics
+        \item Provide complete backward compatibility with Cray SHMEM with all
+        Cray specific features
+    \end{itemize}
+
 \item \textbf{Cray SHMEM}
     \begin{itemize}
-        \item optimize and maintain Cray SHMEM for different platforms
+        \item optimize and maintain Cray SHMEM a production quality SHMEM
+        library implementation for different Cray platforms
         \item implement new features as per the OpenSHMEM standards
         \item propose and prototype new features like Communication
         Contexts, Symmetric Memory Partitions and Teams(PE-Subsets)
@@ -14,16 +26,14 @@
         \item create an optimized message matching layer for the MPI
         implementation.
     \end{itemize}
-
-\item \textbf{Cray Global Arrays(Cray-GA)}
-    \begin{itemize}
-        \item optimize and maintain the ComEx - DMAPP communication layer
-    \end{itemize}
 \end{enumerate}
 
 \textbf{Past Projects}
 \begin{enumerate}
 \setcounter{enumi}{0}
+\item \textbf{Cray Global Arrays(Cray-GA)}
+      optimize and maintain the ComEx - DMAPP communication layer
+
 \item \textbf{OpenSHMEM Reference Implementation}\\
       \textbf{Project description:} University of Houston worked with \textit{Oak
       Ridge National Laboratory} to standardize OpenSHMEM via a community-driven
