--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -6,13 +6,13 @@
       Intel KNL"}. In Proceedings of Fourth Workshop on OpenSHMEM and
       Related Technologies: Big Compute and Big Data Convergence, August,
       2017, Annapolis, Maryland, USA.\\
-      \textit{To Appear}
+      \url{https://link.springer.com/chapter/10.1007/978-3-319-73814-7_1}
 \item K.Kandalla, P.Mendygral, N.Radcliffe, B.Cernohous,
       N.Namashivayam, K.McMahon, C.Sadlo and M.Pagel
       \textit{"Current State of the Cray MPT Software Stacks on the Cray XC
       Series Supercomputers"}. In proceedings of Cray User Group Meeting,
       2017, Redmond, Washington, USA.\\
-      \textit{To Appear}
+%      \url{https://www.semanticscholar.org/paper/Current-State-of-the-Cray-MPT-Software-Stacks-on-XC-Kandalla/d640259f206ae7c556d74614b6977f439bbdda5f}
 \item N.Namashivayam, D.Knaak, B.Cernohous, N.Radcliffe, and
       M.Pagel.
       \textit{"An Evaluation of Thread-Safe and Contexts-Domains Features in
