--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -1,5 +1,9 @@
 \begin{enumerate}
 \setcounter{enumi}{0}
+\item N.Namashivayam, B.Cernohous, D.Pou, and M.Pagel.
+      \textit{"Introducing Cray OpenSHMEMX - A Modular Multi-Communication Layer
+      OpenSHMEM Implementation."}. In Proceedings of Fifth Workshop on OpenSHMEM
+      and Related Technologies, August, 2017, Hanover, Maryland, USA.
 \item N.Namashivayam, B.Cernohous, K.Kandalla, D.Pou,
       J.Robichaux, J.Dinan, and M.Pagel.
       \textit{"Symmetric Memory Partitions in OpenSHMEM: A case study with
@@ -11,8 +15,7 @@
       N.Namashivayam, K.McMahon, C.Sadlo and M.Pagel
       \textit{"Current State of the Cray MPT Software Stacks on the Cray XC
       Series Supercomputers"}. In proceedings of Cray User Group Meeting,
-      2017, Redmond, Washington, USA.\\
-%      \url{https://www.semanticscholar.org/paper/Current-State-of-the-Cray-MPT-Software-Stacks-on-XC-Kandalla/d640259f206ae7c556d74614b6977f439bbdda5f}
+      2017, Redmond, Washington, USA.
 \item N.Namashivayam, D.Knaak, B.Cernohous, N.Radcliffe, and
       M.Pagel.
       \textit{"An Evaluation of Thread-Safe and Contexts-Domains Features in
