--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -1,13 +1,13 @@
 \begin{rSubsection}{Cray, Inc}{12/26/2015 - Present}
                    {Software Engineer - Programming Environment Message Passing Toolkit}
                    {Saint Paul, MN}
-\item Software Enhancements and Parallel Optimizations for Cray Supercomputer and
-      Cluster environments
-\item Work specifically on Cray software stacks like Cray MPI, Cray SHMEM, and
+% \item Software Enhancements and Parallel Optimizations for Cray Supercomputer and
+%       Cluster environments
+\item HPC and parallel programming runtime optimizations for Cray supercomputer
+      and cluster hardware to be utilized by specific customers like U.S
+      government and commercial petroleum industries
+\item Work specifically on Cray software stacks like Cray MPICH, Cray SHMEM, and
       Global Arrays
-\item HPC and parallel programming runtime optimizations for Cray hardware to be
-      utilized by specific customers like U.S government and commercial petroleum
-      industries
 \item Participate and represent Cray in OpenSHMEM standards committee
 \end{rSubsection}
 
@@ -16,8 +16,7 @@
                    {Saint Paul, MN}
 \item Research, Prototype, and Implement new features in Cray SHMEM programming
       library
-\item Optimize Global Arrays library for NAMD and NWChem Chemistry
-      applications
+\item Optimize Global Arrays library for NAMD and NWChem Chemistry applications
 \end{rSubsection}
 
 \begin{rSubsection}{University of Houston}{09/14/2013 - 05/15/2015}
@@ -31,6 +30,4 @@
 
 \begin{rSubsection}{Cognizant Technology Solutions}{06/23/2011 - 07/12/2013}
                    {Programmer Analyst}{Chennai, India}
-\item Design parallel test framework to validate bank statements for a leading
-      financial services company
 \end{rSubsection}
