--- a/cv/technical.tex
+++ b/cv/technical.tex
@@ -1,5 +1,5 @@
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Computer Languages          & C/C++, Fortran, Java, Python, Ruby, Scala \\
+Computer Languages          & C/C++, Fortran, Python\\
 Parallel Programming Models & OpenSHMEM, MPI, Coarray Fortran, OpenMP \\
 Network Libraries           & DMAPP, Verbs, Libfabrics \\
 Architectures               & Cray Supercomputers, \& Clusters, Intel MIC \\
