--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -40,13 +40,13 @@
 \input{experience}
 \end{rSection}
 
-    %---------------------------------------------------------------------
-    %	TECHNICAL STRENGTHS SECTION
-    %---------------------------------------------------------------------
+%---------------------------------------------------------------------
+%	TECHNICAL STRENGTHS SECTION
+%---------------------------------------------------------------------
 
-    \begin{rSection}{Technical Strengths}
-    \input{technical}
-    \end{rSection}
+\begin{rSection}{Technical Strengths}
+\input{technical}
+\end{rSection}
 
 %---------------------------------------------------------------------
 %   PROJECTS
@@ -54,14 +54,6 @@
 
 \begin{rSection}{Projects}
 \input{projects}
-\end{rSection}
-
-%---------------------------------------------------------------------
-%	PUBLICATIONS
-%---------------------------------------------------------------------
-
-\begin{rSection}{Refereed Conference and Workshop Publications}
-\input{publications}
 \end{rSection}
 
 %---------------------------------------------------------------------
@@ -73,11 +65,30 @@
 \end{rSection}
 
 %---------------------------------------------------------------------
-%	AWARDS
+%   AWARDS
 %---------------------------------------------------------------------
 
 \begin{rSection}{Awards and Accomplishments}
 \input{awards}
+\end{rSection}
+
+%---------------------------------------------------------------------
+%	PUBLICATIONS
+%---------------------------------------------------------------------
+
+\begin{rSection}{Refereed Conference and Workshop Publications}
+My full name is \textbf{Naveen Namashivayam Ravichandrasekaran} and I author all
+conference and workshop publications as \textbf{Naveen Namashivayam}.
+\input{publications}
+\end{rSection}
+
+\begin{rSection}{Thesis}
+\begin{itemize}
+\item N.Namashivayam.
+      \textit{"OpenSHMEM as an Effective Communication Layer for PGAS Models"}.
+      Master's Thesis, University of Houston, October, 2015.\\
+      \url{https://pdfs.semanticscholar.org/1c6b/9787b0eda7723a14ba6bc92cd77a7dcb0102.pdf}
+\end{itemize}
 \end{rSection}
 
 \end{document}
