--- a/cv/awards.tex
+++ b/cv/awards.tex
@@ -3,6 +3,6 @@
 \item \textit{Best Paper Award}, 8th International Conference on Partitioned
     Global Address Space Programming Model(PGAS 2014).
 \item \textit{Graduate Assistant Tution Fellowship}, September 2013 - May 2015.
-\item \textit{Best Undergraduate Student Project}, Mepco Schlenk Engineering
-    College, Anna University, India, 2011.\\
+\item \textit{Best Undergraduate Student Project}, Mepco Schlenk Eng. College,
+    Anna University, India, 2011.\\
 \end{enumerate}
