--- a/cv/technical.tex
+++ b/cv/technical.tex
@@ -1,6 +1,6 @@
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Computer Languages          & C/C++, Fortran, Python\\
+Programming Languages       & C/C++, Fortran, Python\\
 Parallel Programming Models & OpenSHMEM, MPI, Coarray Fortran, OpenMP \\
-Network Libraries           & DMAPP, Verbs, Libfabrics \\
+Network Libraries           & DMAPP, Verbs, Libfabric \\
 Architectures               & Cray Supercomputers, \& Clusters, Intel MIC \\
 \end{tabular}
