--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -41,12 +41,24 @@
 \end{rSection}
 
 %---------------------------------------------------------------------
-%	TECHNICAL STRENGTHS SECTION
+%   PUBLICATIONS
 %---------------------------------------------------------------------
 
-\begin{rSection}{Technical Strengths}
-\input{technical}
+\begin{rSection}{Refereed Conference and Workshop Publications}
+Available on request or from Google Scholar. My full name is
+\textbf{Naveen Namashivayam Ravichandrasekaran} and I author all
+conference and workshop publications as \textbf{Naveen Namashivayam}.
+\input{publications}
 \end{rSection}
+
+% \begin{rSection}{Thesis}
+% \begin{itemize}
+% \item N.Namashivayam.
+%       \textit{"OpenSHMEM as an Effective Communication Layer for PGAS Models"}.
+%       Master's Thesis, University of Houston, October, 2015.\\
+%       \url{https://pdfs.semanticscholar.org/1c6b/9787b0eda7723a14ba6bc92cd77a7dcb0102.pdf}
+% \end{itemize}
+% \end{rSection}
 
 %---------------------------------------------------------------------
 %   PROJECTS
@@ -73,22 +85,11 @@
 \end{rSection}
 
 %---------------------------------------------------------------------
-%	PUBLICATIONS
+%   TECHNICAL STRENGTHS SECTION
 %---------------------------------------------------------------------
 
-\begin{rSection}{Refereed Conference and Workshop Publications}
-My full name is \textbf{Naveen Namashivayam Ravichandrasekaran} and I author all
-conference and workshop publications as \textbf{Naveen Namashivayam}.
-\input{publications}
-\end{rSection}
-
-\begin{rSection}{Thesis}
-\begin{itemize}
-\item N.Namashivayam.
-      \textit{"OpenSHMEM as an Effective Communication Layer for PGAS Models"}.
-      Master's Thesis, University of Houston, October, 2015.\\
-      \url{https://pdfs.semanticscholar.org/1c6b/9787b0eda7723a14ba6bc92cd77a7dcb0102.pdf}
-\end{itemize}
+\begin{rSection}{Technical Strengths}
+\input{technical}
 \end{rSection}
 
 \end{document}
