--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -5,16 +5,16 @@
     \begin{itemize}
         \item Cray OpenSHMEMX is a new SHMEM library implementation developed to
         supersede the existing production ready Cray SHMEM library on future
-        exascale Cray architectures
+        exascale Cray Shasta architectures
         \item Design and develop Cray OpenSHMEMX from scratch with support for
-        different transport layers including DMAPP, XPMEM, and Libfabrics
+        different transport layers including DMAPP, XPMEM, and Libfabric
         \item Provide complete backward compatibility with Cray SHMEM with all
         Cray specific features
     \end{itemize}
 
 \item \textbf{Cray MPICH}
     \begin{itemize}
-        \item create an optimized message matching layer for the MPI
+        \item Create an optimized message matching layer for the MPI
         implementation.
     \end{itemize}
 \end{enumerate}
@@ -22,7 +22,7 @@
 \textbf{Past Projects}
 \begin{enumerate}
 \setcounter{enumi}{0}
-\item \textbf{Cray SHMEM}
+\item \textbf{Cray SHMEM}\\
     \textbf{Project description:} Cray SHMEM is a production quality SHMEM
     implementation for different Cray platforms with OpenSHMEM standards
     compliant. \textbf{My Contributions:} I am particularly involved in
@@ -30,7 +30,7 @@
     OpenSHMEM standards, also propose and prototype new features like
     Communication Contexts, Symmetric Memory Partitions and Teams(PE-Subsets).
 
-\item \textbf{Cray Global Arrays(Cray-GA) ComEx-DMAPP}
+\item \textbf{Cray Global Arrays(Cray-GA) ComEx-DMAPP}\\
     \textbf{Project description:} Global Arrays is a PGAS library from Pacific
     Northwest National Laboratory (PNNL). \textbf{My Contributions:} I was
     involved in optimizing and maintain the ComEx - DMAPP communication layer.
