--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -1,7 +1,8 @@
-Professional Software Engineer with experience in the general areas of parallel and
-distributed computing. Specifically, my technical skills focus on the following areas:
-(i)   parallel programming models and runtime systems (MPI and Partitioned Global
-      Address Space models like OpenSHMEM, Global Arrays, and Coarray Fortran);
-(ii)  parallel computing architectures (Cray Supercomputers and Clusters, multi-core
-      systems, GPUs and Intel MIC), and
-(iii) high-speed interconnect libraries(DMAPP)
+Professional Software Engineer with experience in the general areas of parallel
+and distributed computing. Specifically, my technical skills focus in the
+following areas:
+(i)   parallel programming models and runtime systems (MPI and PGAS models like
+      OpenSHMEM, Global Arrays, and Coarray Fortran);
+(ii)  parallel computing architectures (Cray, multi-core systems, GPUs and Intel
+      Xeon Phi), and
+(iii) high-speed interconnects (Aries, Infiniband, ethernet)
