--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -41,39 +41,19 @@
 \end{rSection}
 
 %---------------------------------------------------------------------
-%   PUBLICATIONS
-%---------------------------------------------------------------------
-
-\begin{rSection}{Refereed Conference and Workshop Publications}
-Available on request or from Google Scholar. My full name is
-\textbf{Naveen Namashivayam Ravichandrasekaran} and I author all
-conference and workshop publications as \textbf{Naveen Namashivayam}.
-\input{publications}
-\end{rSection}
-
-% \begin{rSection}{Thesis}
-% \begin{itemize}
-% \item N.Namashivayam.
-%       \textit{"OpenSHMEM as an Effective Communication Layer for PGAS Models"}.
-%       Master's Thesis, University of Houston, October, 2015.\\
-%       \url{https://pdfs.semanticscholar.org/1c6b/9787b0eda7723a14ba6bc92cd77a7dcb0102.pdf}
-% \end{itemize}
-% \end{rSection}
-
-%---------------------------------------------------------------------
-%   PROJECTS
-%---------------------------------------------------------------------
-
-\begin{rSection}{Projects}
-\input{projects}
-\end{rSection}
-
-%---------------------------------------------------------------------
 %   Key Activities
 %---------------------------------------------------------------------
 
 \begin{rSection}{Key Activities}
 \input{activities}
+\end{rSection}
+
+%---------------------------------------------------------------------
+%   TECHNICAL STRENGTHS SECTION
+%---------------------------------------------------------------------
+
+\begin{rSection}{Technical Strengths}
+\input{technical}
 \end{rSection}
 
 %---------------------------------------------------------------------
@@ -85,11 +65,31 @@ conference and workshop publications as \textbf{Naveen Namashivayam}.
 \end{rSection}
 
 %---------------------------------------------------------------------
-%   TECHNICAL STRENGTHS SECTION
+%   PROJECTS
 %---------------------------------------------------------------------
 
-\begin{rSection}{Technical Strengths}
-\input{technical}
+\begin{rSection}{Projects}
+\input{projects}
+\end{rSection}
+
+%---------------------------------------------------------------------
+%   PUBLICATIONS
+%---------------------------------------------------------------------
+
+\begin{rSection}{Refereed Conference and Workshop Publications}
+% Available on request or from Google Scholar.
+My full name is \textbf{Naveen Namashivayam Ravichandrasekaran} and I author all
+conference and workshop publications as \textbf{Naveen Namashivayam}.
+\input{publications}
+\end{rSection}
+
+\begin{rSection}{Thesis}
+\begin{itemize}
+\item N.Namashivayam.
+      \textit{"OpenSHMEM as an Effective Communication Layer for PGAS Models"}.
+      Master's Thesis, University of Houston, October, 2015.\\
+      \url{https://pdfs.semanticscholar.org/1c6b/9787b0eda7723a14ba6bc92cd77a7dcb0102.pdf}
+\end{itemize}
 \end{rSection}
 
 \end{document}
