--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -1,8 +1,7 @@
+%!TEX root = ./cv.tex
 \begin{rSubsection}{Cray, Inc}{12/26/2015 - Present}
                    {Software Engineer - Programming Environment Message Passing Toolkit}
                    {Saint Paul, MN}
-% \item Software Enhancements and Parallel Optimizations for Cray Supercomputer and
-%       Cluster environments
 \item HPC and parallel programming runtime optimizations for Cray supercomputer
       and cluster hardware to be utilized by specific customers like U.S
       government and commercial petroleum industries
@@ -26,4 +25,10 @@
 \item Research and explore strategies for runtime optimizations, and
       compiler-tools interactions for large-scale parallel systems using
       OpenSHMEM and Coarray Fortran programming models
+\end{rSubsection}
+
+\begin{rSubsection}{Cognizant Technology Solutions}{06/23/2011 - 07/12/2013}
+                   {Programmer Analyst}{Chennai, India}
+\item parallel test framework to validate bank statements for one of the leading
+financial services company in their Asset Services Project
 \end{rSubsection}
