--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -1,21 +1,21 @@
+%!TEX root = ./cv.tex
 \textbf{Current Projects}
 \begin{enumerate}
 \setcounter{enumi}{0}
 \item \textbf{Cray OpenSHMEMX}
     \begin{itemize}
-        \item Cray OpenSHMEMX is a new SHMEM library implementation developed to
-        supersede the existing production ready Cray SHMEM library on future
-        exascale Cray Shasta architectures
+        \item Cray OpenSHMEMX, a new OpenSHMEM library implementation supersedes
+        the existing production ready Cray SHMEM library on future exascale Cray
+        Shasta architectures
         \item Design and develop Cray OpenSHMEMX from scratch with support for
         different transport layers including DMAPP, XPMEM, and Libfabric
-        \item Provide complete backward compatibility with Cray SHMEM with all
-        Cray specific features
     \end{itemize}
 
 \item \textbf{Cray MPICH}
     \begin{itemize}
         \item Create an optimized message matching layer for the MPI
-        implementation.
+        implementation
+        \item Optimize GPU-awareness in the MPI implementation
     \end{itemize}
 \end{enumerate}
 
@@ -24,7 +24,7 @@
 \setcounter{enumi}{0}
 \item \textbf{Cray SHMEM}\\
     \textbf{Project description:} Cray SHMEM is a production quality SHMEM
-    implementation for different Cray platforms with OpenSHMEM standards
+    implementation on different Cray platforms with OpenSHMEM standards
     compliant. \textbf{My Contributions:} I am particularly involved in
     maintaining library along with implementing new features as per the
     OpenSHMEM standards, also propose and prototype new features like
