--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -1,5 +1,6 @@
+%!TEX root = ./cv.tex
 Professional Software Engineer with experience in the general areas of parallel
-and distributed computing. Specifically, my technical skills focus in the
+and distributed computing. Specifically, my technical skills focuses in the
 following areas:
 (i)   parallel programming models and runtime systems (MPI and PGAS models like
       OpenSHMEM, Global Arrays, and Coarray Fortran);
