--- a/cv/technical.tex
+++ b/cv/technical.tex
@@ -1,6 +1,8 @@
+%!TEX root = ./cv.tex
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
 Programming Languages       & C/C++, Fortran, Python\\
 Parallel Programming Models & OpenSHMEM, MPI, Coarray Fortran, OpenMP \\
 Network Libraries           & DMAPP, Verbs, Libfabric \\
+System Architectures        & Aarch64, x86\_64, GPU \\
 Architectures               & Cray Supercomputers, \& Clusters, Intel MIC \\
 \end{tabular}
