--- a/cv/activities.tex
+++ b/cv/activities.tex
@@ -1,3 +1,4 @@
+%!TEX root = ./cv.tex
 \begin{enumerate}
 \setcounter{enumi}{0}
 \item \textit{OpenSHMEM standardization Effort}, Participate and represent Cray Inc. in
