--- a/cv/awards.tex
+++ b/cv/awards.tex
@@ -1,3 +1,4 @@
+%!TEX root = ./cv.tex
 \begin{enumerate}
 \setcounter{enumi}{0}
 \item \textit{Best Paper Award}, 8th International Conference on Partitioned
