--- a/cv/education.tex
+++ b/cv/education.tex
@@ -1,3 +1,4 @@
+%!TEX root = ./cv.tex
 {\bf University of Houston, Main Campus}     \hfill {\em December 2015} \\
 M.S. in Computer Science - Specialization in Parallel \& Distributed Systems \smallskip \\
 {\bf Anna University, India}                 \hfill {\em May 2011} \\
