--- a/cv/activities.tex
+++ b/cv/activities.tex
@@ -1,6 +1,7 @@
 %!TEX root = ./cv.tex
 \begin{enumerate}
 \setcounter{enumi}{0}
-\item \textit{OpenSHMEM standardization Effort}, Participate and represent Cray Inc. in
-OpenSHMEM standards committee. \url{http://openshmem.org/}
+\item \textit{OpenSHMEM standardization Effort}, Participate and represent HPE
+in OpenSHMEM standards committee. \url{http://openshmem.org/}. Introduced
+put-with-signal and non-blocking AMOs in OpenSHMEM specification version 1.5.
 \end{enumerate}
