--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -11,7 +11,7 @@
 \address{250 East 6th Street, Apt 0402 \\
          Saint Paul, MN 55101}
 \address{(832)~$\cdot$~720~$\cdot$~2393 \\
-         \url{http://www.naveenravichandrasekaran.com/} \\
+         % \url{http://www.naveenravichandrasekaran.com/} \\
          nravi.research@gmail.com}
 
 \begin{document}
