--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -1,5 +1,16 @@
 %!TEX root = ./cv.tex
-\begin{rSubsection}{Cray, Inc}{12/26/2015 - Present}
+\begin{rSubsection}{Hewlett Packard Enterprise}{12/26/2015 - 12/12/2019}
+                   {Systems/Software Engineer - Programming Environment Message Passing Toolkit}
+                   {Saint Paul, MN}
+\item HPC and parallel programming runtime optimizations for Cray supercomputer
+      and cluster hardware to be utilized by specific customers like U.S
+      government and commercial petroleum industries
+\item Work specifically on Cray software stacks like Cray MPICH, Cray SHMEM, and
+      Global Arrays
+\item Participate and represent Cray in OpenSHMEM standards committee
+\end{rSubsection}
+
+\begin{rSubsection}{Cray, Inc}{12/26/2015 - 12/12/2019}
                    {Software Engineer - Programming Environment Message Passing Toolkit}
                    {Saint Paul, MN}
 \item HPC and parallel programming runtime optimizations for Cray supercomputer
