--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -4,9 +4,9 @@
 \setcounter{enumi}{0}
 \item \textbf{Cray OpenSHMEMX}
     \begin{itemize}
-        \item Cray OpenSHMEMX, a new OpenSHMEM library implementation supersedes
-        the existing production ready Cray SHMEM library on future exascale Cray
-        Shasta architectures
+        \item Cray OpenSHMEMX, a new OpenSHMEM library implementation that
+        supersedes the existing production ready Cray SHMEM library on future
+        exascale Cray Shasta architectures
         \item Design and develop Cray OpenSHMEMX from scratch with support for
         different transport layers including DMAPP, XPMEM, and Libfabric
     \end{itemize}
