--- a/cv/activities.tex
+++ b/cv/activities.tex
@@ -2,6 +2,5 @@
 \begin{enumerate}
 \setcounter{enumi}{0}
 \item \textit{OpenSHMEM standardization Effort}, Participate and represent HPE
-in OpenSHMEM standards committee. \url{http://openshmem.org/}. Introduced
-put-with-signal and non-blocking AMOs in OpenSHMEM specification version 1.5.
+in OpenSHMEM standards committee. \url{http://openshmem.org/}.
 \end{enumerate}
