--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -1,24 +1,17 @@
 %!TEX root = ./cv.tex
-\begin{rSubsection}{Hewlett Packard Enterprise}{12/26/2015 - 12/12/2019}
+\begin{rSubsection}{Hewlett Packard Enterprise}{01/01/2020 - present}
                    {Systems/Software Engineer - Programming Environment Message Passing Toolkit}
                    {Saint Paul, MN}
-\item HPC and parallel programming runtime optimizations for Cray supercomputer
-      and cluster hardware to be utilized by specific customers like U.S
-      government and commercial petroleum industries
-\item Work specifically on Cray software stacks like Cray MPICH, Cray SHMEM, and
-      Global Arrays
-\item Participate and represent Cray in OpenSHMEM standards committee
-\end{rSubsection}
-
 \begin{rSubsection}{Cray, Inc}{12/26/2015 - 12/12/2019}
                    {Software Engineer - Programming Environment Message Passing Toolkit}
                    {Saint Paul, MN}
-\item HPC and parallel programming runtime optimizations for Cray supercomputer
+\item HPC and parallel programming runtime optimizations for HPE/CrayHPE/Cray supercomputer
       and cluster hardware to be utilized by specific customers like U.S
       government and commercial petroleum industries
 \item Work specifically on Cray software stacks like Cray MPICH, Cray SHMEM, and
       Global Arrays
-\item Participate and represent Cray in OpenSHMEM standards committee
+\item Participate and represent HPE/Cray in OpenSHMEM standards committee
+\end{rSubsection}
 \end{rSubsection}
 
 \begin{rSubsection}{Cray, Inc}{05/18/2015 - 12/25/2015}
@@ -40,6 +33,6 @@
 
 \begin{rSubsection}{Cognizant Technology Solutions}{06/23/2011 - 07/12/2013}
                    {Programmer Analyst}{Chennai, India}
-\item parallel test framework to validate bank statements for one of the leading
+\item Prepare parallel test framework to validate bank statements for one of the leading
 financial services company in their Asset Services Project
 \end{rSubsection}
