--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -1,51 +1,47 @@
 %!TEX root = ./cv.tex
 \begin{enumerate}
 \setcounter{enumi}{0}
+\item \textbf{N.Namashivayam}, B.Long, D.Eachempati, B.Cernohous, and M.Pagel.
+      \textit{"A Modern Fortran Interface in OpenSHMEM."}. In Proceedings of
+      ACM Transactions on Parallel Computing, August, 2020.
 \item \textbf{N.Namashivayam}, B.Cernohous, D.Pou, and M.Pagel.
       \textit{"Introducing Cray OpenSHMEMX - A Modular Multi-Communication Layer
       OpenSHMEM Implementation."}. In Proceedings of Fifth Workshop on OpenSHMEM
-      and Related Technologies, August, 2017, Hanover, Maryland, USA.
-\item \textbf{N.Namashivayam}, B.Cernohous, K.Kandalla, D.Pou,
-      J.Robichaux, J.Dinan, and M.Pagel.
+      and Related Technologies, August, 2018, Hanover, USA.
+\item \textbf{N.Namashivayam}, B.Cernohous, K.Kandalla, D.Pou, J.Robichaux,
+      J.Dinan, and M.Pagel.
       \textit{"Symmetric Memory Partitions in OpenSHMEM: A case study with
       Intel KNL"}. In Proceedings of Fourth Workshop on OpenSHMEM and
       Related Technologies: Big Compute and Big Data Convergence, August,
-      2017, Annapolis, Maryland, USA.\\
-      \url{https://link.springer.com/chapter/10.1007/978-3-319-73814-7_1}
+      2017, Annapolis, USA.
 \item K.Kandalla, P.Mendygral, N.Radcliffe, B.Cernohous,
       \textbf{N.Namashivayam}, K.McMahon, C.Sadlo and M.Pagel
       \textit{"Current State of the Cray MPT Software Stacks on the Cray XC
       Series Supercomputers"}. In proceedings of Cray User Group Meeting,
-      2017, Redmond, Washington, USA.
+      2017, Redmond, USA.
 \item \textbf{N.Namashivayam}, D.Knaak, B.Cernohous, N.Radcliffe, and
       M.Pagel.
       \textit{"An Evaluation of Thread-Safe and Contexts-Domains Features in
       Cray SHMEM"}. In Proceedings of Third Workshop on OpenSHMEM and Related
       Technologies: Enhancing OpenSHMEM for Hybrid Environments, August, 2016,
-      Hanover, Maryland, USA.\\
-      \url{https://link.springer.com/chapter/10.1007/978-3-319-50995-2_11}
+      Hanover, USA.
 \item \textbf{N.Namashivayam}, D.Eachempati, D.Khaldi and B.Chapman.
       \textit{"OpenSHMEM as a Portable Communication Layer for PGAS Models - A
       Case Study with Coarray Fortran"}. In Proceedings of IEEE Cluster 2015,
-      September, 2015, Chicago, USA.\\
-      \url{https://www.computer.org/csdl/proceedings/cluster/2015/6598/00/6598a438.pdf}
+      September, 2015, Chicago, USA.
 \item \textbf{N.Namashivayam}, D.Khaldi, D.Eachempati and B.Chapman.
       \textit{"Extending the Strided Communication Interface in OpenSHMEM"}. In
       Proceedings of Second OpenSHMEM Workshop: Experiences, Implementations and
-      Tools, August, 2015, Annapolis, Maryland, USA.\\
-      \url{https://link.springer.com/chapter/10.1007/978-3-319-26428-8_1}
+      Tools, August, 2015, Annapolis, USA.
 \item D.Knaak, and \textbf{N.Namashivayam}.
       \textit{"Proposing OpenSHMEM Extensions Towards a Future for Hybrid
       Programming and Heterogeneous Computing"}, In Proceedings of Second
       OpenSHMEM Workshop: Experiences, Implementations and Tools, August, 2015,
-      Annapolis, Maryland, USA.\\
-      \url{https://dl.acm.org/citation.cfm?id=2952638}
-\item \textbf{N.Namashivayam}, S.Ghosh, D.Khaldi, D.Eachempati, and
-      B.Chapman.
+      Annapolis, USA.
+\item \textbf{N.Namashivayam}, S.Ghosh, D.Khaldi, D.Eachempati, and B.Chapman.
       \textit{"Native Mode-Based Optimizations of Remote Memory Accesses in
       OpenSHMEM for Intel Xeon Phi"}, 8th International Conference on Partitioned
-      Global Address Space Programming Models (PGAS 2014).\\
-      \url{https://dl.acm.org/citation.cfm?id=2676881}
+      Global Address Space Programming Models (PGAS 2014).
 \end{enumerate}
 
 
