--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -4,6 +4,5 @@ and distributed computing. Specifically, my technical skills focuses in the
 following areas:
 (i)   parallel programming models and runtime systems (MPI and PGAS models like
       OpenSHMEM, Global Arrays, and Coarray Fortran);
-(ii)  parallel computing architectures (Cray, multi-core systems, GPUs and Intel
-      Xeon Phi), and
-(iii) high-speed interconnects (Aries, Infiniband, ethernet)
+(ii)  parallel computing architectures, and
+(iii) high-speed interconnects
