--- a/cv/cv.tex
+++ b/cv/cv.tex
@@ -25,14 +25,6 @@
 \end{rSection}
 
 %---------------------------------------------------------------------
-%	EDUCATION SECTION
-%---------------------------------------------------------------------
-
-\begin{rSection}{Education}
-\input{education}
-\end{rSection}
-
-%---------------------------------------------------------------------
 %	WORK EXPERIENCE SECTION
 %---------------------------------------------------------------------
 
@@ -46,6 +38,14 @@
 
 \begin{rSection}{Key Activities}
 \input{activities}
+\end{rSection}
+
+%---------------------------------------------------------------------
+%   EDUCATION SECTION
+%---------------------------------------------------------------------
+
+\begin{rSection}{Education}
+\input{education}
 \end{rSection}
 
 %---------------------------------------------------------------------
@@ -87,8 +87,8 @@ conference and workshop publications as \textbf{Naveen Namashivayam}.
 \begin{itemize}
 \item N.Namashivayam.
       \textit{"OpenSHMEM as an Effective Communication Layer for PGAS Models"}.
-      Master's Thesis, University of Houston, October, 2015.\\
-      \url{https://pdfs.semanticscholar.org/1c6b/9787b0eda7723a14ba6bc92cd77a7dcb0102.pdf}
+      Master's Thesis, University of Houston, October, 2015.
+      % \url{https://pdfs.semanticscholar.org/1c6b/9787b0eda7723a14ba6bc92cd77a7dcb0102.pdf}
 \end{itemize}
 \end{rSection}
 
