Add paper updates

--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -1,6 +1,9 @@
 %!TEX root = ./cv.tex
 \begin{enumerate}
 \setcounter{enumi}{0}
+\item \textbf{N.Namashivayam}, S.Mehta, and P.C.Yew. \textit{"Variable-sized 
+      Blocks for Locality-aware SpMV"}. In Proceedings of International
+        Symposium on Code Generation and Optimization (CGO 2021). (Accepted).
 \item \textbf{N.Namashivayam}, B.Long, D.Eachempati, B.Cernohous, and M.Pagel.
       \textit{"A Modern Fortran Interface in OpenSHMEM."}. In Proceedings of
       ACM Transactions on Parallel Computing, August, 2020.
