--- a/cv/activities.tex
+++ b/cv/activities.tex
@@ -1,6 +1,6 @@
 %!TEX root = ./cv.tex
 \begin{enumerate}
 \setcounter{enumi}{0}
-\item \textit{OpenSHMEM standardization Effort}, Participate and represent HPE
-in OpenSHMEM standards committee. \url{http://openshmem.org/}.
+\item Workshop on OpenSHMEM and Related Technologies 2016, 2017, 2018, and 2021.
+\item IEEE \textit{Transactions on Parallel and Distributed Systems} (TPDS).
 \end{enumerate}
