--- a/cv/awards.tex
+++ b/cv/awards.tex
@@ -1,9 +1,9 @@
 %!TEX root = ./cv.tex
 \begin{enumerate}
 \setcounter{enumi}{0}
-\item \textit{Best Paper Award}, 8th International Conference on Partitioned
+\item \textbf{Best Paper Award}, 8th International Conference on Partitioned
     Global Address Space Programming Model(PGAS 2014).
-\item \textit{Graduate Assistant Tution Fellowship}, September 2013 - May 2015.
-\item \textit{Best Undergraduate Student Project}, Mepco Schlenk Eng. College,
-    Anna University, India, 2011.\\
+\item \textbf{Graduate Assistant Tution Fellowship}, September 2013 - May 2015.
+\item \textbf{Best Undergraduate Student Project}, Mepco Schlenk Eng. College,
+    Anna University, India, 2011.
 \end{enumerate}
