--- a/cv/experience.tex
+++ b/cv/experience.tex
@@ -1,38 +1,24 @@
 %!TEX root = ./cv.tex
-\begin{rSubsection}{Hewlett Packard Enterprise}{01/01/2020 - present}
-                   {Systems/Software Engineer - Programming Environment Message Passing Toolkit}
-                   {Saint Paul, MN}
-\begin{rSubsection}{Cray, Inc}{12/26/2015 - 12/12/2019}
-                   {Software Engineer - Programming Environment Message Passing Toolkit}
-                   {Saint Paul, MN}
-\item HPC and parallel programming runtime optimizations for HPE/CrayHPE/Cray supercomputer
-      and cluster hardware to be utilized by specific customers like U.S
-      government and commercial petroleum industries
-\item Work specifically on Cray software stacks like Cray MPICH, Cray SHMEM, and
-      Global Arrays
-\item Participate and represent HPE/Cray in OpenSHMEM standards committee
-\end{rSubsection}
+\begin{rSubsection}{Hewlett Packard Enterprise (previously Cray, Inc)}{Jan,2016 - present}
+                   {Senior Systems/Software Engineer}
+                   {Bloomington, MN}
+\item HPC and ML communication runtime optimizations for HPE/Cray supercomputers
+      and clusters
+\item Tech Lead for Cray programming environment software stacks including
+      Cray MPI and Cray SHMEM
+\item Participate and represent HPE/Cray in OpenSHMEM and MPI standards committee
 \end{rSubsection}
 
-\begin{rSubsection}{Cray, Inc}{05/18/2015 - 12/25/2015}
-                   {Intern - Programming Environment Message Passing Toolkit}
+\begin{rSubsection}{Cray, Inc}{May,2015 - Dec,2015}
+                   {Intern}
                    {Saint Paul, MN}
-\item Research, Prototype, and Implement new features in Cray SHMEM programming
-      library
+\item Research and prototype new communication protocols in Cray SHMEM library
 \item Optimize Global Arrays library for NAMD and NWChem Chemistry applications
 \end{rSubsection}
 
-\begin{rSubsection}{University of Houston}{09/14/2013 - 05/15/2015}
+\begin{rSubsection}{University of Houston}{Sep,2013 - May,2015}
                    {Research Assistant - HPC Tools}{Houston, TX}
-\item Research Assistant to Dr.Barbara Chapman(Chair, Computer Science
-      \& Mathematics(CSM) Group - Brookhaven National Laboratory)
-\item Research and explore strategies for runtime optimizations, and
-      compiler-tools interactions for large-scale parallel systems using
-      OpenSHMEM and Coarray Fortran programming models
-\end{rSubsection}
-
-\begin{rSubsection}{Cognizant Technology Solutions}{06/23/2011 - 07/12/2013}
-                   {Programmer Analyst}{Chennai, India}
-\item Prepare parallel test framework to validate bank statements for one of the leading
-financial services company in their Asset Services Project
+\item Research Assistant to Prof. Barbara Chapman
+\item Explore strategies for communication runtime optimizations for scalable
+      parallel systems
 \end{rSubsection}
