--- a/cv/projects.tex
+++ b/cv/projects.tex
@@ -13,41 +13,9 @@
 
 \item \textbf{Cray MPICH}
     \begin{itemize}
+        \item Introduce advanced GPU-awareness using GPU Async features
         \item Create an optimized message matching layer for the MPI
         implementation
-        \item Optimize GPU-awareness in the MPI implementation
     \end{itemize}
 \end{enumerate}
 
-\textbf{Past Projects}
-\begin{enumerate}
-\setcounter{enumi}{0}
-\item \textbf{Cray SHMEM}\\
-    \textbf{Project description:} Cray SHMEM is a production quality SHMEM
-    implementation on different Cray platforms with OpenSHMEM standards
-    compliant. \textbf{My Contributions:} I am particularly involved in
-    maintaining library along with implementing new features as per the
-    OpenSHMEM standards, also propose and prototype new features like
-    Communication Contexts, Symmetric Memory Partitions and Teams(PE-Subsets).
-
-\item \textbf{Cray Global Arrays(Cray-GA) ComEx-DMAPP}\\
-    \textbf{Project description:} Global Arrays is a PGAS library from Pacific
-    Northwest National Laboratory (PNNL). \textbf{My Contributions:} I was
-    involved in optimizing and maintain the ComEx - DMAPP communication layer.
-
-\item \textbf{OpenSHMEM Reference Implementation}\\
-    \textbf{Project description:} University of Houston worked with \textit{Oak
-    Ridge National Laboratory} to standardize OpenSHMEM via a community-driven
-    specification with a reference implementation. \textbf{My Contributions:}
-    I have been particularly involved in the optimization of the collective
-    communication performance.
-
-\item \textbf{Coarray Fortran}\\
-    \textbf{Project description:} Coarray Fortran is a set of new language
-    features incorporated into the Fortran 2008 standard to enable parallel
-    programming in Fortran with minimal changes to the language syntax. It is a
-    joint project between University of Houston and \textit{Total}
-    \textbf{My Contributions:} I was particularly involved in the optimization
-    of the Coarray Fortran runtime library with new underlying communication
-    layers.
-\end{enumerate}
