--- a/cv/publications.tex
+++ b/cv/publications.tex
@@ -1,9 +1,14 @@
 %!TEX root = ./cv.tex
+\textbf{Refereed Conference and Workshop Publications}
 \begin{enumerate}
 \setcounter{enumi}{0}
+\item T.Groves, \textbf{N.Namashivayam}, B.Cook, B.Friesen, N.Keen, D.Trebotich,
+      N.J.Wright, B.Alverson, D.Roweth, and K.Underwood. \textit{"Not All
+      Applications Have Boring Communication Patterns: Profiling Message Matching
+      with BMM"}. In Proceedings of Concurrency and Computation: Practice and Experience.
 \item \textbf{N.Namashivayam}, S.Mehta, and P.C.Yew. \textit{"Variable-sized 
       Blocks for Locality-aware SpMV"}. In Proceedings of International
-        Symposium on Code Generation and Optimization (CGO 2021). (Accepted).
+        Symposium on Code Generation and Optimization (CGO 2021).
 \item \textbf{N.Namashivayam}, B.Long, D.Eachempati, B.Cernohous, and M.Pagel.
       \textit{"A Modern Fortran Interface in OpenSHMEM."}. In Proceedings of
       ACM Transactions on Parallel Computing, August, 2020.
@@ -45,6 +50,25 @@
       \textit{"Native Mode-Based Optimizations of Remote Memory Accesses in
       OpenSHMEM for Intel Xeon Phi"}, 8th International Conference on Partitioned
       Global Address Space Programming Models (PGAS 2014).
+\end{enumerate}
+
+\textbf{Thesis}
+\begin{itemize}
+\item N.Namashivayam.
+      \textit{"OpenSHMEM as an Effective Communication Layer for PGAS Models"}.
+      Master's Thesis, University of Houston, October, 2015.
+\end{itemize}
+
+\textbf{Other Publications}
+\begin{enumerate}
+\setcounter{enumi}{0}
+\item \textbf{N.Namashivayam}, K. Kandalla, T. White, L.Kaplan, and M. Pagel.
+      \textit{"Exploring Fully Offloaded GPU Stream-Aware Message Passing"}.
+      arXiv preprint arXiv:2306.15773.
+\item \textbf{N.Namashivayam}, K. Kandalla, T. White, N. Radcliffle, L.Kaplan,
+      and M. Pagel.
+      \textit{"Exploring GPU Stream-Aware Message Passing using Triggered
+      Operations"}. arXiv preprint arXiv:2306.15773.
 \end{enumerate}
 
 
