--- a/cv/summary.tex
+++ b/cv/summary.tex
@@ -1,8 +1,8 @@
 %!TEX root = ./cv.tex
 Professional Software Engineer with experience in the general areas of parallel
-and distributed computing. Specifically, my technical skills focuses in the
-following areas:
-(i)   parallel programming models and runtime systems (MPI and PGAS models like
-      OpenSHMEM, Global Arrays, and Coarray Fortran);
+and distributed computing. Specifically, my technical skills focuses in design
+and optimizations in the following areas:
+(i)   distributed parallel programming models and runtime systems for HPC (MPI
+      and OpenSHMEM) and ML (NCCL/RCCL);
 (ii)  parallel computing architectures, and
-(iii) high-speed interconnects
+(iii) high-speed network interconnects (HPE Slingshot and Nvidia Infiniband).
