--- a/cv/technical.tex
+++ b/cv/technical.tex
@@ -1,8 +1,10 @@
 %!TEX root = ./cv.tex
 \begin{tabular}{ @{} >{\bfseries}l @{\hspace{6ex}} l }
-Programming Languages       & C/C++, Fortran, Python\\
-Parallel Programming Models & OpenSHMEM, MPI, Coarray Fortran, OpenMP \\
-Network Libraries           & DMAPP, Verbs, Libfabric \\
-System Architectures        & Aarch64, x86\_64, GPU \\
-Architectures               & Cray Supercomputers, \& Clusters, Intel MIC \\
+Programming Languages       & C/C++, Python \\
+Parallel Programming Models \& Libraries & OpenSHMEM, MPI, NCCL/RCCL \\
+Network Libraries           & Libfabric, UCX, Verbs \\
+Architectures               & HPE Cray Supercomputers \& Clusters \\
+System Architectures        & Aarch64 (Nvidia Grace), x86\_64 (AMD Milan) \\
+Network Architectures       & HPE Slingshot, Cray Aries, Nvidia Infiniband \\
+Device Architectures        & AMD (MI250X, MI300A), Nvidia (A100, H100) \\
 \end{tabular}
