--- a/cv/education.tex
+++ b/cv/education.tex
@@ -1,6 +1,8 @@
 %!TEX root = ./cv.tex
-{\bf University of Houston, Main Campus}     \hfill {\em December 2015} \\
+{\bf University of Minnesota, Twin Cities}   \hfill {\em Aug,2022 - Present} \\
+Ph.D. in Computer Science \smallskip \\
+{\bf University of Houston, Main Campus}     \hfill {\em Aug,2013 - Dec,2015} \\
 M.S. in Computer Science - Specialization in Parallel \& Distributed Systems \smallskip \\
-{\bf Anna University, India}                 \hfill {\em May 2011} \\
+{\bf Anna University, India}                 \hfill {\em Sep,2007 - May,2011} \\
 Bachelors in Engineering - Electrical \& Electronics Engineering \smallskip
 
